se agrega seccion

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -72,7 +72,12 @@ footer {
   font-size: 1.2rem;
 }
 
-.redes img {
+.redes a img {
   margin: 30px;
-  width: 10%;
+  width: 50%;
+}
+
+.clientes img {
+  margin: 30px;
+  width: 25%;
 }
