--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,14 @@ footer {
   font-size: 1.2rem;
 }
 
-.redes img {
+.redes a img {
   margin: 30px;
-  width: 10%;
+  width: 50%;
+}
+
+.clientes img {
+  margin: 30px;
+  width: 25%;
 }
 
 /*# sourceMappingURL=style.css.map */
