--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -81,3 +81,10 @@ footer {
   margin: 30px;
   width: 25%;
 }
+
+.servicios img {
+  margin: 30px;
+  width: 50%;
+  border-radius: 30px;
+  border: 1px solid black;
+}
